<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBDBDB"
    tools:context=".Online.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/txtLogin"
        android:text="@string/btnLogin"
        android:fontFamily="@font/nexa_bold"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:gravity="center_horizontal|center_vertical"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:placeholderTextColor="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        android:layout_marginLeft="50dp"
        android:layout_above="@id/txtLoginPasswordTIL"
        android:id = "@+id/txtLoginUsernameTIL">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize = "20sp"
            android:textColor="@color/colorPrimaryDark"
            android:id = "@+id/txtLoginUsername"
            android:hint = "@string/txtUsername" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        app:placeholderTextColor="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        android:id = "@+id/txtLoginPasswordTIL"
        app:passwordToggleEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/txtLoginPassword"
            android:inputType="textPassword"
            android:textSize = "20sp"
            android:textColor="@color/colorPrimaryDark"
            android:hint = "@string/txtPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/cbRemember"
        android:text="@string/rememberMe"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:buttonTint="@color/colorPrimaryDark"
        android:layout_below="@id/txtLoginPasswordTIL">

    </com.google.android.material.checkbox.MaterialCheckBox>

    <Button
        android:layout_width="match_parent"
        android:layout_marginRight="50dp"
        android:layout_height="40dp"
        android:id = "@+id/btnLogin"
        android:text="@string/btnLogin"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_below="@id/cbRemember"
        android:layout_centerHorizontal="true"
        android:onClick="Login"
        style="@style/quizzy_button_w_darkbg"/>

</RelativeLayout>