<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Online.RegisterActivity"
    android:background="#DBDBDB">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/txtRegister"
        android:text="@string/btnRegister"
        android:fontFamily="@font/nexa_bold"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:gravity="center_horizontal|center_vertical"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        app:placeholderTextColor="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        android:layout_above="@id/txtPasswordTIL"
        android:id = "@+id/txtUsernameTIL">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/txtUsername"
            android:textColor="@color/colorPrimaryDark"
            android:textSize = "20sp"
            android:hint = "@string/txtUsername" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id = "@+id/txtPasswordTIL"
        app:placeholderTextColor="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        android:layout_marginLeft="50dp"
        app:passwordToggleEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/txtPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize = "20sp"
            android:hint = "@string/txtPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        app:placeholderTextColor="@color/colorPrimaryDark"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtPasswordTIL"
        android:id = "@+id/txtEmailTIL">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/txtEmail"
            android:inputType="textEmailAddress"
            android:textSize = "20sp"
            android:textColor="@color/colorPrimaryDark"
            android:hint = "Email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_marginRight="50dp"
        android:layout_height="40dp"
        android:id = "@+id/btnRegister"
        android:text="@string/btnRegister"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_below="@id/txtEmailTIL"
        android:layout_centerHorizontal="true"
        android:onClick="Register"
        style="@style/quizzy_button_w_darkbg"/>

</RelativeLayout>